--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- HEADER END -->
 	<div class="container">
 			<div class="row ms-lg-5">
 				<div class="align-self-center offset-lg-5 col-lg-7 offset-md-2 col-md-10 ps-lg-5 pb-lg-5" opacity="1">
