--- a/politiqueconfidentialite/index.html
+++ b/politiqueconfidentialite/index.html
@@ -83,6 +83,8 @@
 </div>
 <!-- bloc-7 END -->
 
+
+
 <!-- ScrollToTop Button -->
 <button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button>
 <!-- ScrollToTop Button END-->
@@ -101,7 +103,7 @@
 					</div>
 					<div class="text-center scroll-fx-up-in scroll-fx-zoom-pull">
 						<h3 class="mb-4 tc-5060 mb-lg-0">
-							davidrenovation@yahoo.com<br> <br>30 Chemin La Roche <br>33650 Martillac<br> France<br> <br>Siret : 948 548 110 00014<br><br><a class="ltc-5060" href="../">Politique en matière de cookies</a> <br><a class="ltc-5060" href="../">Politique de confidentialité</a><br>
+							davidrenovation@yahoo.com<br> <br>30 Chemin La Roche <br>33650 Martillac<br> France<br> <br>Siret : 948 548 110 00014<br><br><a class="ltc-5060" href="politiquecookies/index.html">Politique en matière de cookies</a> <br><a class="ltc-5060" href="politiqueconfidentialite/index.html">Politique de confidentialité</a><br>
 						</h3>
 					</div>
 				</div>
@@ -130,7 +132,7 @@
 						I design things using the best web Nous transformons les jardins avec maîtrise et finitions de haute qualité. tool
 					</h4>
 					<div class="text-center animated fadeInUp animDelay02" data-appear-anim-style="fadeInUp">
-						<a href="../contact/" class="btn btn-d btn-sq designer-wire-button" target="_blank">Solicitez un devis</a>
+						<a href="./contact/" class="btn btn-d btn-sq designer-wire-button" target="_blank">Solicitez un devis</a>
 					</div>
 				</div>
 			</div>
@@ -151,11 +153,11 @@
 
 
 <!-- Additional JS -->
-<script src="../js/bootstrap.bundle.js?6394"></script>
-<script src="../js/blocs.js?753"></script>
-<script src="../js/lazysizes.min.js" defer></script>
-<script src="../js/universal-parallax.min.js?4235"></script>
-<script src="../js/scrollFX.js?3298"></script>
+<script src="./js/bootstrap.bundle.js?6394"></script>
+<script src="./js/blocs.js?753"></script>
+<script src="./js/lazysizes.min.js" defer></script>
+<script src="./js/universal-parallax.min.js?8230"></script>
+<script src="./js/scrollFX.js?7414"></script>
 <!-- Additional JS END -->
 
 
