--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 		</div>
 	</div>
 
+
+
+
+
+
+
+
 	<!-- HEADER END -->
 	<div class="container">
 			<div class="row ms-lg-5">
@@ -212,6 +219,14 @@
 			</div>
 </div>
 <!-- bloc-5 END -->
+
+
+
+
+<!-- footer start-->
+
+
+
 
 <!-- ScrollToTop Button -->
 <button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button>
