--- a/contact/index.html
+++ b/contact/index.html
@@ -229,11 +229,11 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.js?6394"></script>
-<script src="./js/blocs.js?753"></script>
-<script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/universal-parallax.min.js?8230"></script>
-<script src="./js/scrollFX.js?7414"></script>
+<script src="../js/bootstrap.bundle.js?6394"></script>
+<script src="../js/blocs.js?753"></script>
+<script src="../js/lazysizes.min.js" defer></script>
+<script src="../js/universal-parallax.min.js?8230"></script>
+<script src="../js/scrollFX.js?7414"></script>
 <!-- Additional JS END -->
 
 
