--- a/contact/index.html
+++ b/contact/index.html
@@ -127,7 +127,7 @@
 					<div class="form-group mb-3">
 						<textarea id="message" class="form-control" rows="4" cols="50" required="" placeholder="Votre message" maxlength="1000"></textarea>
 					</div> 
-					<button class="bloc-button btn designer-wire-button btn-c-3783 float-lg-end" type="submit" background-color="green">
+					<button class="bloc-button" type="submit" background-color="green">
 						Contact
 					</button>
 				</form>
