--- a/contact/index.html
+++ b/contact/index.html
@@ -32,7 +32,7 @@
 		  -webkit-tap-highlight-color: transparent;
   }
   
-  button {
+  .buttons {
 	  width: 150px;
 	  height: 50px;
 	  cursor: pointer;
@@ -43,19 +43,19 @@
 	  border-radius: 4px;
 	  box-shadow: inset 0px 3px 5px rgba(255,255,255,0.5), 0px 0px 10px rgba(0,0,0,0.15);
 	  background: rgb(2,0,36);
-  background: linear-gradient(45deg, rgba(2,0,36,0) 5%, rgba(255,255,255,.5) 6%, rgba(255,255,255,0) 9%, rgba(255,255,255,.5) 10%, rgba(255,255,255,0) 17%, rgba(255,255,255,.5) 19%, rgba(255,255,255,0) 21%);
+  	  background: linear-gradient(45deg, rgba(2,0,36,0) 5%, rgba(255,255,255,.5) 6%, rgba(255,255,255,0) 9%, rgba(255,255,255,.5) 10%, rgba(255,255,255,0) 17%, rgba(255,255,255,.5) 19%, rgba(255,255,255,0) 21%);
 	  background-size: 150%;
 	  background-position: right;
 	  transition: 1s;
   }
   
-  button:hover {
+  .buttons:hover {
 	  background-position: left;
 	  color: white;
 	  box-shadow: inset 0px 3px 5px rgba(255,255,255,1), 0px 0px 10px rgba(0,0,0,0.25);
   }
   
-  button:focus {
+  .buttons:focus {
 	  outline: none;
   }
   </style>
