--- a/contact/index.html
+++ b/contact/index.html
@@ -51,7 +51,7 @@
   
   .buttons:hover {
 	  background-position: left;
-	  color: white;
+	  color: green;
 	  box-shadow: inset 0px 3px 5px rgba(255,255,255,1), 0px 0px 10px rgba(0,0,0,0.25);
   }
   
