--- a/contact/index.html
+++ b/contact/index.html
@@ -29,7 +29,7 @@
 			width: 150px;
 			margin: 7px;
 			color: #ffffff;
-			background-color: #36a2eb;
+			background-color: #02021b;
 			border-radius: 8px;
 			font-family: "proxima-nova-soft", sans-serif;
 			font-weight: 600;
