--- a/contact/index.html
+++ b/contact/index.html
@@ -36,6 +36,14 @@
 			text-decoration: none;
 			transition: box-shadow 200ms ease-out;
 		  }
+		  .bn49:hover {
+			box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+			background-color: green;
+		  }
+		  .bn49 after{
+			content: "envoyez";
+			background-color: blue;
+		  }
   </style>
 </head>
 <body data-clean-url="true">
