--- a/nos-services/index.html
+++ b/nos-services/index.html
@@ -17,7 +17,31 @@
 <!-- Analytics -->
  
 <!-- Analytics END -->
-    
+<style>
+	.bn49 {
+		border: 0;
+		text-align: center;
+		display: inline-block;
+		padding: 14px;
+		width: 150px;
+		margin: 7px;
+		color: #ffffff;
+		background-color: #02021b;
+		border-radius: 8px;
+		font-family: "proxima-nova-soft", sans-serif;
+		font-weight: 600;
+		text-decoration: none;
+		transition: box-shadow 200ms ease-out;
+	  }
+	  .bn49:hover {
+		box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+		background-color: green;
+	  }
+	  .bn49 after{
+		content: "envoyez";
+		background-color: blue;
+	  }
+</style>
 </head>
 <body data-clean-url="true">
 <!-- Main container -->
@@ -174,7 +198,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../" class="btn btn-d btn-lg w-100">Solicitez un devis</a>
+								<a href="../" class="bn49">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
@@ -200,7 +224,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../" class="btn btn-d btn-lg w-100">Solicitez un devis</a>
+								<a href="../" class="bn49">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
@@ -226,7 +250,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../" class="btn btn-d btn-lg w-100">Solicitez un devis</a>
+								<a href="../" class="bn49">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
