--- a/nos-services/index.html
+++ b/nos-services/index.html
@@ -250,7 +250,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../" class="bn49">Solicitez un devis</a>
+								<a href="../" class="bn49 btn-lg w-100">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
