--- a/nos-services/index.html
+++ b/nos-services/index.html
@@ -159,7 +159,7 @@
 					</h3>
 					<p class="tc-5060">
 						<br>
-					</p><a href="../contact/" class="bn49 btn-lg w-100">Solicitez un devis</a>
+					</p><a href="../contact/" class="bn49 btn-lg w-50">Solicitez un devis</a>
 				</div>
 			</div>
 		</div>
@@ -198,7 +198,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../contact/" class="bn49 btn-lg w-100">Solicitez un devis</a>
+								<a href="../contact/" class="bn49 btn-lg w-50">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
@@ -308,7 +308,7 @@
 						I design things using the best web Nous transformons les jardins avec maîtrise et finitions de haute qualité. tool
 					</h4>
 					<div class="text-center animated fadeInUp animDelay02" data-appear-anim-style="fadeInUp">
-						<a href="../contact/" class="bn49 btn-lg w-100">Solicitez un devis</a>
+						<a href="./contact/" class="btn btn-d btn-sq designer-wire-button" target="_blank">Solicitez un devis</a>
 					</div>
 				</div>
 			</div>
