--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <div class="bloc bgc-2594 tc-5060" id="bloc-5">
 	<div class="container bloc-lg bloc-xl-lg">
 		<div class="row">
-			<div class="align-self-center offset-lg-0 col-lg-5 designer-device offset-md-0 col-md-5 col-sm-10">
+			<div class="align-self-center offset-lg-0 col-lg-5 designer-device offset-md-0 col-md-5 col-sm-10 hide-on-mobile">
 				<div class="card-columns">
 					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/close-up-ax-log-mountain.webp"><img src="img/lazyload-ph.png" data-src="img/close-up-ax-log-mountain.jpg" class="img-fluid mb-3 lazyload" alt="close up-ax-log-mountain" width="145" height="96"></picture><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Captura%20de%20pantalla%202024-06-10%20a%20las%2017.17.49.webp"><img src="img/lazyload-ph.png" data-src="img/Captura%20de%20pantalla%202024-06-10%20a%20las%2017.17.49.png" class="img-fluid mb-3 lazyload" alt="Captura%20de%20pantalla%202024 06-10%20a%20las%2017.17.49" width="145" height="191"></picture><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/closeup-chainsaw-wooden-stump-faceless-woodsman-start-saw.webp"><img src="img/lazyload-ph.png" data-src="img/closeup-chainsaw-wooden-stump-faceless-woodsman-start-saw.jpg" class="img-fluid mb-3 lazyload" alt="closeup chainsaw-wooden-stump-faceless-woodsman-start-saw" width="145" height="96"></picture>
 				</div>
