--- a/nos-services/index.html
+++ b/nos-services/index.html
@@ -67,7 +67,7 @@
 									<li class="nav-item">
 										<a href="../" class="nav-link">Accueil</a>
 									</li>
-									<li class="nav-item">
+									<li class="nav-item hide-on-mobile">
 										<a href="." class="nav-link">nos Services</a>
 									</li>
 									<li class="nav-item">
