--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<h3 class="mg-sm text-lg-center h3-style tc-5060">
 									Découvrez nos services professionnels en élagage et taille d'arbres.
 								</h3>
-								<h2 class="mg-md tc-5060 designer-section-title text-lg-center">
+								<h2 class="mg-md tc-5060 designer-section-title text-lg-center hide-on-mobile">
 									SERVICES
 								</h2>
 								<h4 class="designer-bold tc-5060 mg-sm text-lg-center">
@@ -144,7 +144,7 @@
 									Expertise en élagage, installation de clôtures et entretien de jardins, garantissant la beauté et la sécurité de vos espaces verts.
 								</p>
 								<div class="text-center">
-									<a href="./contact/" class="btn btn-d btn-sq designer-wire-button scroll-fx-up-in">Solicitez un devis</a>
+									<a href="./nos-services/" class="btn btn-d btn-sq designer-wire-button scroll-fx-up-in">Nos Services</a>
 								</div>
 							</div>
 						</div>
