--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <div id="cookie-icon" class="cookie-icon">
-    <a href="#" id="cookie-policy-link"><img src="img/cookies-web.png" alt="Cookie Policy" width="40" height="40"></a>
+    <a href="#" id="cookie-policy-link"><img src="img/cookies-web.png" width="40" height="40"></a>
 </div>
 <div class="page-container">
     
