--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		.cookie-icon {
 			position: fixed;
 			bottom: 20px;
-			right: 20px;
+			left: 20px;
 			z-index: 1001;
 			cursor: pointer;
 		}
@@ -73,7 +73,7 @@
 </div>
 
 <div id="cookie-icon" class="cookie-icon">
-    <a href="#" id="cookie-policy-link"><img src="img/cookies-web.png" width="40" height="40"></a>
+    <a href="#" id="cookie-policy-link"><img src="img/proteccionpolitica-de-datosprivacidadseguridad.png" width="40" height="40"></a>
 </div>
 <div class="page-container">
     
