--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 
 <div id="cookie-icon" class="cookie-icon">
-    <a href="politiquecookies/index.html" id="cookie-policy-link"><img src="img/proteccionpolitica-de-datosprivacidadseguridad.png" width="40" height="40"></a>
+    <a href="politiquecookies/index.html" id="cookie-policy-link"><img src="img/galleta.png" width="40" height="40"></a>
 </div>
 <div class="page-container">
     
