--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     <button id="decline-cookies" class="btn">Refuser</button>
 </div>
 
-{% comment %} <div id="cookie-icon" class="cookie-icon">
+<!-- <div id="cookie-icon" class="cookie-icon">
     <a href="politiquecookies/index.html" id="cookie-policy-link"><img src="img/galleta.png" width="40" height="40"></a>
-</div> {% endcomment %}
+</div> -->
 <div class="page-container">
     
 <!-- bloc-1 -->
