--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<div class="row g-0">
 					<div class="col-lg-12">
 						<div class="row">
-							<div class="col-lg-6 col-md-8 offset-md-2 offset-lg-3">
+							<div class="col-lg-6 col-md-8 offset-md-2 offset-lg-3" style="text-align:center !important;">
 								<h3 class="mg-sm text-lg-center h3-style tc-5060">
 									Découvrez nos services professionnels en élagage et taille d'arbres.
 								</h3>
