--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/close-up-ax-log-mountain.webp"><img src="img/lazyload-ph.png" data-src="img/close-up-ax-log-mountain.jpg" class="img-fluid mb-3 lazyload" alt="close up-ax-log-mountain" width="145" height="96"></picture><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Captura%20de%20pantalla%202024-06-10%20a%20las%2017.17.49.webp"><img src="img/lazyload-ph.png" data-src="img/Captura%20de%20pantalla%202024-06-10%20a%20las%2017.17.49.png" class="img-fluid mb-3 lazyload" alt="Captura%20de%20pantalla%202024 06-10%20a%20las%2017.17.49" width="145" height="191"></picture><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/closeup-chainsaw-wooden-stump-faceless-woodsman-start-saw.webp"><img src="img/lazyload-ph.png" data-src="img/closeup-chainsaw-wooden-stump-faceless-woodsman-start-saw.jpg" class="img-fluid mb-3 lazyload" alt="closeup chainsaw-wooden-stump-faceless-woodsman-start-saw" width="145" height="96"></picture>
 				</div>
 			</div>
-			<div class="col-lg-6 col-sm-10 offset-sm-1 offset-lg-1 align-self-center col-md-7 offset-md-0 scroll-fx-right-in">
+			<div class="col-lg-6 col-sm-10 offset-sm-1 offset-lg-1 align-self-center col-md-7 offset-md-0 scroll-fx-right-in" style="text-align:center !important;">
 				<h3 class="mg-md tc-3783 h3-bloc-5-style">
 					Découvrez notre technologie de pointe pour l'élagage et la taille d'arbres.
 				</h3>
