--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	<!-- HEADER END -->
 	<div class="container">
 			<div class="row ms-lg-5">
-				<div class="align-self-center offset-lg-5 col-lg-7 offset-md-2 col-md-10 ps-lg-5 pb-lg-5" opacity="1">
+				<div class="align-self-center offset-lg-5 col-lg-7 offset-md-2 col-md-10 ps-lg-5 pb-lg-5" style="text-align:center !important;" opacity="1">
 					<p>
 						<br>
 					</p>
