--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					<h3 class="mb-4 h3-3-style tc-5060">
 						Revitalisez votre jardin avec notre expertise
 					</h3>
-					<h4 class="text-end text-md-end tc-5060 float-lg-none h4-bloc-1-style text-lg-start" data-appear-anim-style="fadeInDown">
+					<h4 class="text-end text-md-end tc-5060 float-lg-none h4-bloc-1-style text-lg-start text-in-mobile" data-appear-anim-style="fadeInDown">
 						Service complet pour jardins et arbres<br>
 					</h4>
 					<h2 class="float-none tc-5060 mg-lg text-end text-md-end" data-appear-anim-style="fadeInRight">
@@ -165,7 +165,7 @@
 				<h2 class="mg-md text-center tc-3783">
 					Nous disposons d'un camion nacelle pour vous.
 				</h2>
-				<h2 class="mg-md text-center designer-section-title">
+				<h2 class="mg-md text-center designer-section-title text-in-mobile">
 					Idéal pour tous vos travaux d'élagage et de maintenance en hauteur, avec efficacité et sécurité garanties.
 				</h2><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Captura%20de%20pantalla%202024-06-10%20a%20las%2017.16.06.webp"><img src="img/lazyload-ph.png" data-src="img/Captura%20de%20pantalla%202024-06-10%20a%20las%2017.16.06.png" class="img-fluid mx-auto d-block img-style animated fadeIn mb-lg-0 mt-lg-5 lazyload" data-appear-anim-style="fadeIn" alt="5" width="333" height="426"></picture>
 			</div>
