--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</h4>
 					<h2 class="float-none tc-5060 mg-lg text-end text-md-end" data-appear-anim-style="fadeInRight">
 						<br>
-					</h2><a href="./contact/" class="btn btn-d btn-sq designer-wire-button">Solicitez un devis</a>
+					</h2><a href="./contact/" class="btn btn-d btn-sq designer-wire-button title-on-mobile">Solicitez un devis</a>
 				</div>
 			</div>
 		</div>
