--- a/contact/index.html
+++ b/contact/index.html
@@ -118,7 +118,7 @@
 <!-- bloc-18 -->
 <div class="bloc bgc-5060 bg-10 d-bloc" id="bloc-18">
 	<div class="container bloc-lg bloc-md-lg">
-		<div class="row pb-lg-0">
+		<div class="row pb-lg-0 contact-mobile">
 			<div class="col-md-6 text-center mt-lg-5">
 				<span class="icon-md far fa-compass icon-semi-rounded-b"></span>
 				<h3 class="mt-lg-5">
