--- a/nos-services/index.html
+++ b/nos-services/index.html
@@ -198,7 +198,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../contact/" class="bn49 btn-lg w-100">Solicitez un devis</a>
+								<a href="../contact/" class="bn49 btn-lg w-100 hide-on-mobile">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
@@ -224,7 +224,7 @@
 								</ul>
 							</div>
 							<div class="card-footer">
-								<a href="../contact/" class="bn49 btn-lg w-100">Solicitez un devis</a>
+								<a href="../contact/" class="bn49 btn-lg w-100 hide-on-mobile">Solicitez un devis</a>
 							</div>
 						</div>
 					</div>
