--- a/contact/index.html
+++ b/contact/index.html
@@ -120,8 +120,8 @@
 	<div class="container bloc-lg bloc-md-lg">
 		<div class="row pb-lg-0 contact-mobile">
 			<div class="col-md-6 text-center mt-lg-5">
-				<span class="icon-md far fa-compass icon-semi-rounded-b"></span>
-				<h3 class="mt-lg-5">
+				<span class="icon-md far fa-compass icon-semi-rounded-b hide-on-mobile"></span>
+				<h3 class="mt-lg-5 hide-on-mobile">
 					<br>
 				</h3>
 				<h3 class="mb-4">
@@ -129,8 +129,8 @@
 				</h3>
 			</div>
 			<div class="col-md-6 text-center mt-lg-5">
-				<span class="icon-md fa fa-phone-alt icon-semi-rounded-b"></span>
-				<h3 class="mt-lg-5 h3-06-68-45-06-35-style">
+				<span class="icon-md fa fa-phone-alt icon-semi-rounded-b hide-on-mobile"></span>
+				<h3 class="mt-lg-5 h3-06-68-45-06-35-style hide-on-mobile">
 					<br>
 				</h3><a href="tel:0033668450635" class="btn btn-d btn-sq btn-lg">06 68 45 06 35</a>
 			</div>
