--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 					</div>
 					<div class="text-center scroll-fx-up-in scroll-fx-zoom-pull">
 						<h3 class="mb-4 tc-5060 mb-lg-0">
-							davidrenovation@yahoo.com<br> <br>30 Chemin La Roche <br>33650 Martillac<br> France<br> <br><span>Siret : 948 548 110 00014</span><br><br><a class="ltc-5060" href="politiquecookies/index.html">Politique en matière de cookies</a> <br><a class="ltc-5060" href="politiqueconfidentialite/index.html">Politique de confidentialité</a><br>
+							davidrenovation@yahoo.com<br> <br>30 Chemin La Roche <br>33650 Martillac<br> France<br> <br><span class="no-format">Siret : 948 548 110 00014</span><br><br><a class="ltc-5060" href="politiquecookies/index.html">Politique en matière de cookies</a> <br><a class="ltc-5060" href="politiqueconfidentialite/index.html">Politique de confidentialité</a><br>
 						</h3>
 					</div>
 				</div>
