--- a/politiqueconfidentialite/index.html
+++ b/politiqueconfidentialite/index.html
@@ -129,7 +129,7 @@
 						Perfection et précision dans chaque espace vert que nous touchons.
 					</h2>
 					<h4 class="text-center mg-lg animated fadeInUp animDelay02 h4-style" data-appear-anim-style="fadeInUp">
-						I design things using the best web Nous transformons les jardins avec maîtrise et finitions de haute qualité. tool
+						Je conçois des choses en utilisant les meilleurs outils web. Nous transformons les jardins avec maîtrise et finitions de haute qualité.
 					</h4>
 					<div class="text-center animated fadeInUp animDelay02" data-appear-anim-style="fadeInUp">
 						<a href="./contact/" class="btn btn-d btn-sq designer-wire-button" target="_blank">Solicitez un devis</a>
