--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'">
+
     <link rel="shortcut icon" type="image/jpg" href="../favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="../all.css?8374">
