--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				</div>
 			</div>
 		</div>
-	<div class="container fill-bloc-bottom-edge">
+	<div class="container fill-bloc-bottom-edge hide-on-mobile">
 			<div class="row">
 				<div class="col-12">
 					<div class="text-center">
